--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-astro": "0.13.0",
     "prettier-plugin-astro-organize-imports": "0.4.5",
-    "prettier-plugin-tailwindcss": "0.5.14"
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "tw-colors": "^3.3.1"
   }
 }
