Revert "Delete astrolicious i18n and use default Astro i18n"
This reverts commit e6cd6a2dce483588a984121d8681b3188c1fcd3a.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/check": "0.5.10",
     "@astrojs/tailwind": "5.1.0",
+    "@astrolicious/i18n": "0.3.3",
     "@fontsource-variable/mulish": "5.0.18",
     "astro": "4.6.2",
+    "i18next": "23.11.2",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   },
