--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "5.1.0",
     "@fontsource-variable/mulish": "5.0.18",
     "astro": "4.6.2",
+    "highlight.js": "^11.9.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   },
